# hammlet

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  hook_post-commit.py  hook_pre-commit.py  levels_table.csv  pyproject.toml  pytest.ini  setup.cfg  setup.py  version.py
data/: data_human_colugo_tupaia_mouse  data_laurasiatherian
hammlet/: instance.py  main.py  models.py  parsers.py  printers.py  utils.py
hmmle/: main.py  models.py  parsers.py  printers.py  utils.py
src/hammlet/: __init__.py  cli.py  drawing.py  main.py  models.py  optimizer.py  parsers.py  point.py  printers.py  utils.py
src/hammlet/commands/: __init__.py  bootstrap.py  bootstrap_LL.py  calculate_aij.py  chains.py  draw.py  levels.py  mle.py  mle_nr.py  show_permutation.py  stat_chains.py  stat_levels.py  stat_reverse.py
tests/: test_utils.py
