[tool.poetry]
name = "Hammlet"
version = "1.5.1.post43.dev0"
description = "Hybridization Models Maximum Likelihood Estimator"
license="GNU GPLv3"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ctlab/hammlet"
homepage = "https://github.com/ctlab/hammlet"
keywords = ['phylogeny', 'maximum-likelihood-estimation']

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
numpy = "*"
scipy = ">=1.0.0"
click = "*"
tabulate = "*"
svgwrite = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
black = { version = "*", allows-prereleases = true, python = "^3.6" }
flake8 = "*"
tox = "*"

[tool.poetry.scripts]
hammlet = "hammlet.cli:cli"

[tool.black]
line-length = 88
target-version = ['py27']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
  | build
  | _build
  | buck-out

  # project-specific
  | data
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
